# ff-one

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORGE_CORE_SYNC.md  NEXT.md  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
crates/ff-types/: Cargo.toml
crates/ff-types/src/: block.rs  economy.rs  lib.rs  security.rs
docs/: DRIVER_PLUGIN_BOUNDARY.md  ROADMAP.md
docs/adr/: 0001-driver-plugin-boundary.md  README.md
domain/agents/: Cargo.toml
domain/agents/src/: lib.rs  manager.rs  pool.rs  prompt.rs  state.rs
domain/consensus/: Cargo.toml
domain/consensus/src/: coordinator.rs  lib.rs
domain/economy/: Cargo.toml
domain/economy/src/: lib.rs  market.rs
domain/quests/: Cargo.toml
domain/quests/src/: lib.rs  store.rs
domain/security/: Cargo.toml
domain/security/src/: analyser.rs  lib.rs
domain/world/: Cargo.toml
domain/world/src/: generator.rs  lib.rs  mesher.rs  physics.rs  simulator.rs
foundation/contracts/: Cargo.toml
foundation/contracts/src/: error.rs  events.rs  traits.rs
foundation/contracts/tests/: mandatory.rs
foundation/core/: Cargo.toml
foundation/core/src/: lib.rs  traits.rs
foundation/types/: Cargo.toml
foundation/types/src/: agent.rs  block.rs  consensus.rs  economy.rs  lib.rs  plugin.rs  position.rs  quest.rs  sandbox.rs  security.rs  tick.rs  world.rs
plugins/plugin-agents/: Cargo.toml
plugins/plugin-agents/src/: lib.rs
plugins/plugin-economy/: Cargo.toml
plugins/plugin-economy/src/: lib.rs
plugins/plugin-free-llm/: Cargo.toml  Plugin.toml
plugins/plugin-free-llm/src/: lib.rs
plugins/plugin-gm/: Cargo.toml
plugins/plugin-gm/src/: lib.rs
plugins/plugin-world/: Cargo.toml
plugins/plugin-world/src/: lib.rs
runtime/cli/: Cargo.toml
runtime/cli/src/: main.rs
runtime/drivers/: Cargo.toml
runtime/drivers/src/: claude.rs  free.rs  lib.rs  mock.rs  openai.rs
runtime/plugin/: Cargo.toml
runtime/plugin/src/: abi.rs  host.rs  lib.rs  manifest.rs  registry.rs
runtime/sandbox/: Cargo.toml
runtime/sandbox/src/: executor.rs  lib.rs
runtime/server/: Cargo.toml
runtime/server/src/: app.rs  event_log.rs  handlers.rs  lib.rs  state.rs
