[workspace]
members = [
    # ── foundation ─────────────────────────────────────────────────────────
    # Fundamentale Bausteine: Typen, Traits, Fehler, Events.
    # Kennt keine höheren Layer.
    "foundation/types",
    "foundation/core",

    # ── domain ─────────────────────────────────────────────────────────────
    # Fachdomänen: one concept = one crate.
    # Kommuniziert nur über Events/Commands/Contracts.
    "domain/world",
    "domain/agents",
    "domain/economy",
    "domain/quests",
    "domain/security",
    "domain/consensus",

    # ── runtime ────────────────────────────────────────────────────────────
    # Außenwelt-Brücke: HTTP, I/O, Plugins, CLI.
    # Orchestriert — besitzt keine Businesswahrheit.
    "runtime/drivers",
    "runtime/sandbox",
    "runtime/plugin",
    "runtime/server",
    "runtime/cli",

    # ── plugins ────────────────────────────────────────────────────────────
    # cdylib-Pakete — zur Laufzeit vom Plugin-Host geladen.
    "plugins/plugin-agents",
    "plugins/plugin-world",
    "plugins/plugin-gm",
    "plugins/plugin-economy",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/wwwbkgme-oss/ff-one"
description  = "ForgeFabrik — AI agents mine, fight, and build in a shared voxel reality."

[workspace.dependencies]
# Async runtime
tokio              = { version = "1", features = ["full"] }
# Serialisation
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
# Error handling
thiserror          = "2"
anyhow             = "1"
# Network / API
reqwest            = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum               = { version = "0.8", features = ["macros"] }
tower              = { version = "0.5", features = ["full"] }
tower-http         = { version = "0.6", features = ["cors", "trace"] }
# CLI / TUI
clap               = { version = "4", features = ["derive", "env"] }
ratatui            = "0.29"
crossterm          = "0.28"
# Async utilities
async-trait        = "0.1"
futures            = "0.3"
# IDs + hashing
uuid               = { version = "1", features = ["v4", "serde"] }
blake3             = "1"
# Time
chrono             = { version = "0.4", features = ["serde"] }
# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# World generation
noise              = "0.9"
rand               = "0.8"
rayon              = "1"
# Dynamic loading
libloading         = "0.8"
# Utilities
tempfile           = "3"
regex              = "1"

# ── Internal crates (BKG layer paths, no product prefix) ──────────────────
types      = { path = "foundation/types" }
core       = { path = "foundation/core" }
world      = { path = "domain/world" }
agents     = { path = "domain/agents" }
economy    = { path = "domain/economy" }
quests     = { path = "domain/quests" }
security   = { path = "domain/security" }
consensus  = { path = "domain/consensus" }
drivers    = { path = "runtime/drivers" }
sandbox    = { path = "runtime/sandbox" }
plugin     = { path = "runtime/plugin" }
server     = { path = "runtime/server" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
