[package]
name        = "ff-types"
description = "ForgeFabrik — pure domain types. Zero logic, zero traits."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
blake3     = { workspace = true }
chrono     = { workspace = true }
