[package]
name        = "agents"
description = "ForgeFabrik domain — agent state machine, manager, and prompt templates."
version.workspace = true
edition.workspace = true
license.workspace = true

# BKG: domain — kein HTTP, kein I/O, kein Plugin-Hosting.
# AgentDriver-Implementierungen (Claude, OpenAI) leben in runtime/drivers.
[dependencies]
types       = { workspace = true }
contracts   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
