[package]
name        = "consensus"
description = "ForgeFabrik domain — BLAKE3 world-state consensus protocol."
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
types      = { workspace = true }
contracts  = { workspace = true }
serde      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
blake3     = { workspace = true }
tokio      = { workspace = true }
async-trait = { workspace = true }
tracing    = { workspace = true }
