[package]
name        = "types"
description = "ForgeFabrik foundation — pure domain types. No logic, no traits, no I/O."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
blake3     = { workspace = true }
chrono     = { workspace = true }
