[package]
name="cli"
description="ForgeFabrik runtime — forgefabrik CLI + TUI."
version.workspace=true
edition.workspace=true
license.workspace=true
[[bin]]
name="forgefabrik"
path="src/main.rs"
[dependencies]
types={workspace=true}
server={workspace=true}
serde_json={workspace=true}
uuid={workspace=true}
tokio={workspace=true}
axum={workspace=true}
clap={workspace=true}
ratatui={workspace=true}
crossterm={workspace=true}
anyhow={workspace=true}
tracing={workspace=true}
tracing-subscriber={workspace=true}
reqwest={workspace=true}
futures={workspace=true}
