[package]
name="plugin"
description="ForgeFabrik runtime — dynamic plugin host."
version.workspace=true
edition.workspace=true
license.workspace=true
[dependencies]
types={workspace=true}
contracts={workspace=true}
serde={workspace=true}
uuid={workspace=true}
toml={workspace=true}
libloading={workspace=true}
tokio={workspace=true}
async-trait={workspace=true}
anyhow={workspace=true}
tracing={workspace=true}
[dev-dependencies]
tempfile={workspace=true}
