[package]
name        = "sandbox"
description = "ForgeFabrik runtime — secure process-based code execution."
version.workspace = true
edition.workspace = true
license.workspace = true

# BKG runtime: I/O erlaubt (Prozesse spawnen), Fachlogik verboten.
[dependencies]
types      = { workspace = true }
contracts  = { workspace = true }
serde      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
tokio      = { workspace = true }
async-trait = { workspace = true }
tempfile   = { workspace = true }
tracing    = { workspace = true }
